@@ -126,6 +126,10 @@ IN DEVELOPMENT
    * Prompt for an ftp password if none is provided.
      (Vincent Ladeuil, #137044)
 
+   * Reuse bound branch associated transport to avoid multiple
+     connections.
+     (Vincent Ladeuil, #128076, #131396)
+
   IMPROVEMENTS:
 
    * Add the option "--show-diff" to the commit command in order to display
